# matter-rs-experiment

./: Cargo.toml  notes.md
.cargo/: config.toml
src/: dnssd.rs  main.rs  mdns.rs
