[package]
name = "matter_rs_bare_metal"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
hal = { package = "esp32c3-hal", version = "0.9.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32c3", "log"] }

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "fe2137a94afa8538e8ed622e7c10e01ffbeda0b2", features = ["esp32c3", "embedded-svc", "wifi", "ipv6"] }
smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.25.0", default-features = false}
log = "0.4.17"

no-std-net = "0.6"
heapless = "0.7.16"
domain = { version = "0.7.2", default_features = false }

matter-iot = { git = "https://github.com/ivmarkov/matter-rs", rev = "6c6f74e2e0607d3da6b89797fb64f6065b17b166", default-features = false, features = ["crypto_rustcrypto"] }

# would be nice to not need it - however there are allocations made in RustCrypto (apparently even beyond what the X509 handling does)
esp-alloc = { version = "0.3.0"}
