[package]
name = "matter_rs_bare_metal"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
hal = { package = "esp32c3-hal", version = "0.9.0", features = ["async"] }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32c3", "log"] }

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "fe2137a94afa8538e8ed622e7c10e01ffbeda0b2", features = ["esp32c3", "esp32c3-async", "embassy-net", "embedded-svc", "wifi", "ipv6"] }
smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.25.0", default-features = false}
log = "0.4.17"

no-std-net = "0.6"
heapless = "0.7.16"
domain = { version = "0.7.2", default_features = false }

critical-section = "1.1.1"

#matter-iot = { git = "https://github.com/ivmarkov/matter-rs", rev = "31b5a0668e57158e67b5e21cc4ee9d312e47d59c", default-features = false, features = ["crypto_rustcrypto"] }
matter-iot = { path = "/projects/foo/matter-rs/matter", default-features = false, features = ["crypto_rustcrypto"] }
# would be nice to not need it - however there are allocations made in RustCrypto (apparently even beyond what the X509 handling does)
esp-alloc = { version = "0.3.0"}

embassy-executor = { version = "0.2.0", package = "embassy-executor", features = ["nightly", "executor-thread",  "arch-riscv32"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
futures-util = { version = "0.3.17", default-features = false }
embassy-futures = { version = "0.1.0" }
# this is embassy-net configuring itself with a link-local IPv6 address
embassy-net = { path = "/projects/foo/embassy/embassy-net", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv6", "log"] }
embedded-io = { version = "0.4.0" }
embassy-sync = { version = "0.2.0" }

[patch.'https://github.com/embassy-rs/embassy']
embassy-time = { version = "0.1.1" }
embassy-sync = { version = "0.2.0" }
[patch.crates-io]
esp-hal-common = { path = "/projects/esp/esp-hal/esp-hal-common" }
[patch.'file:///C:/projects/foo/embassy/embassy-net-driver']
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594" }
